--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,33 @@ header ul li a:hover{
 .cta_getStarted:hover{
     opacity:0.8;
 }
+header .bars{
+    display:none;
+}
+
+@media (max-width:375px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 30px 20px;
+    }
+    header ul{
+        display: none;
+    }
+    header ul li a{
+        transition: none;
+    }
+    .cta_getStarted{
+        display:  none;
+        transition: none;
+    }
+    header .bars{
+        display: block;
+        max-height: 24px;
+    }
+}
+
 
 /* -------------------------------------------------------- MAIN_Hero*/
 main .hero{
@@ -62,7 +89,32 @@ main .hero h2{
 }
 main .hero p{
     font-weight: 500;
-    color: #000000;
+    color: #B3B2B7;
+}
+
+@media (max-width:375px) {
+    main .hero{
+        flex-direction: column-reverse;
+        padding: 30px;
+        gap:0px
+    }
+    main .hero img{
+        width: 120%;
+    }
+    main .hero div{
+        text-align: center;
+        align-items: center;
+    }
+    main .hero h2{
+        font-size: 36px;
+    }
+    main .hero p{
+        line-height: 1.7;
+    }
+    main .hero .cta_getStarted{
+        display: block;
+        text-align: center;
+    }
 }
 
 /* -------------------------------------------------------- MAIN_About Us*/
@@ -86,7 +138,7 @@ main .aboutUs .description h3{
 }
 main .aboutUs .description p{ 
     font-weight: 500;
-    color: #000000;
+    color: #B3B2B7;
 }
 
 main .aboutUs .itemlist{
@@ -122,6 +174,32 @@ main .aboutUs .itemlist .item p{
     line-height: 26px;
     letter-spacing: -0.01em;
     color: #B3B2B7;
+}
+
+@media (max-width:375px) {
+    main .aboutUs{
+        flex-direction: column;
+        margin-top:75px;
+        padding: 0;
+        gap:10px;
+    }
+    main .aboutUs .description{
+        padding:10px 30px;
+        text-align: center;
+    }
+    main .aboutUs .description h3{
+        font-size: 32px;
+    }
+    main .aboutUs .description p{
+        line-height: 1.7;
+    }
+    main .aboutUs .itemlist{
+        padding: 10px;
+        gap: 50px;
+    }
+    main .aboutUs .itemlist .item h4{
+        padding-bottom: 10px;
+    }
 }
 
 /* -------------------------------------------------------- MAIN_Testimony*/
@@ -165,6 +243,28 @@ main .testimony .cardlist .card p{
     color: #B9B9C1;
     text-align: center;
 }
+@media (max-width:375px) {
+    main .testimony{
+        padding: 0 10px;
+        margin-top:75px;
+    } 
+    main .testimony h3{
+        text-align: center;
+        font-size: 32px;
+        padding-bottom: 20px;
+    }
+    main .testimony .cardlist .card:nth-of-type(1){
+        display:none;
+    }
+    main .testimony .cardlist .card:nth-of-type(3){
+        display:none;
+    }
+    main .testimony button{
+        display:block;
+    }
+}
+
+
 
 /* -------------------------------------------------------- MAIN_Banner*/
 main .banner{
@@ -196,9 +296,21 @@ main .cta_getStarted2{
     transition: 0.3s;
 }
 main .cta_getStarted2:hover{
-    opacity: 1;
-    color:white;
-    background-color: #323851;
+    color:#f3603bab;
+}
+
+@media (max-width:375px) {
+    main .banner{
+        flex-direction: column;
+        padding: 75px 10px;
+        gap: 30px;
+        background-image: url("../img/bg-simplify-section-mobile.svg");
+        background-repeat: no-repeat;
+    }
+    main .banner h2{
+        text-align: center;
+        font-size: 32px;
+    }
 }
 
 /* -------------------------------------------------------- FOOTER*/
@@ -215,6 +327,14 @@ footer .iconList{
     align-items: center;
     font-size: 16px;
     cursor: pointer;
+}
+footer .iconList div>img{
+    display: flex;
+    gap: 5px;
+}
+
+footer .iconList div>img:hover{
+    fill:#F3603B;    
 }
 footer ul{
     list-style: none;
@@ -263,4 +383,9 @@ footer .form_copy p{
     font-size: 12.5px;
     line-height: 18px;
     color: #8C8C94;
+}
+@media (max-width:375px) {
+    footer{
+        flex-direction: column;
+    }
 }
