Agregando los 3 puntos de los testimonios y cambiar el icono del menú

--- a/css/style.css
+++ b/css/style.css
@@ -321,8 +321,6 @@ main .testimony .puntos{
     }
 }
 
-
-
 /* -------------------------------------------------------- MAIN_Banner*/
 main .banner{
     margin-top: 180px;
@@ -367,6 +365,9 @@ main .cta_getStarted2:hover{
     main .banner h2{
         text-align: center;
         font-size: 32px;
+    }
+    main .banner h2 br{
+        display:none;
     }
 }
 
